<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/feature_card_bg"
    android:foreground="@drawable/feature_card_fg"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="16dp"
        >

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:fontFamily="sans-serif-medium"
                android:gravity="center"
                android:lines="1"
                android:minHeight="56dp"
                android:paddingStart="56dp"
                android:paddingEnd="56dp"
                android:text="@string/feature_cards_dialog_title"
                android:textColor="@color/white_80"
                android:textSize="20sp"
                />

            <ImageButton
                android:id="@+id/image_button"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="4dp"
                android:background="@drawable/bg_button_circle"
                android:src="@drawable/ic_close"
                />
        </FrameLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:ellipsize="end"
            android:fontFamily="sans-serif-medium"
            android:lines="1"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:text="@string/feature_cards_dialog_sort_title"
            android:textColor="@color/white_80"
            android:textSize="18sp"
            />

        <RadioButton
            android:id="@+id/sort_by_popular_radio_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:ellipsize="end"
            android:fontFamily="sans-serif"
            android:lines="1"
            android:minHeight="48dp"
            android:paddingStart="10dp"
            android:paddingEnd="16dp"
            android:text="@string/feature_cards_dialog_sort_sort_by_popular"
            android:textColor="@color/white_60"
            android:textSize="16sp"
            />

        <RadioButton
            android:id="@+id/sort_by_last_used_radio_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:ellipsize="end"
            android:fontFamily="sans-serif"
            android:lines="1"
            android:minHeight="48dp"
            android:paddingStart="10dp"
            android:paddingEnd="16dp"
            android:text="@string/feature_cards_dialog_sort_sort_by_last_used"
            android:textColor="@color/white_60"
            android:textSize="16sp"
            />

        <RadioButton
            android:id="@+id/sort_by_add_date_radio_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:ellipsize="end"
            android:fontFamily="sans-serif"
            android:lines="1"
            android:minHeight="48dp"
            android:paddingStart="10dp"
            android:paddingEnd="16dp"
            android:text="@string/feature_cards_dialog_sort_sort_by_add_date"
            android:textColor="@color/white_60"
            android:textSize="16sp"
            />

        <RadioButton
            android:id="@+id/sort_by_name_radio_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:ellipsize="end"
            android:fontFamily="sans-serif"
            android:lines="1"
            android:minHeight="48dp"
            android:paddingStart="10dp"
            android:paddingEnd="16dp"
            android:text="@string/feature_cards_dialog_sort_sort_by_name"
            android:textColor="@color/white_60"
            android:textSize="16sp"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:ellipsize="end"
            android:fontFamily="sans-serif-medium"
            android:lines="1"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:text="@string/feature_cards_dialog_other_title"
            android:textColor="@color/white_80"
            android:textSize="18sp"
            />

        <CheckBox
            android:id="@+id/show_categories_check_box"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:ellipsize="end"
            android:fontFamily="sans-serif"
            android:lines="1"
            android:minHeight="48dp"
            android:paddingStart="10dp"
            android:paddingEnd="16dp"
            android:text="@string/feature_cards_dialog_other_show_categories"
            android:textColor="@color/white_60"
            android:textSize="16sp"
            />
    </LinearLayout>
</FrameLayout>