<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipe_refresh_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clipToPadding="false"
            android:overScrollMode="never"
            />
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

    <ru.g000sha256.wallet.widget.SimpleView
        android:id="@+id/top_bar_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/gray33_95"
        app:layout_constraintBottom_toTopOf="@id/top_divider_view"
        app:layout_constraintTop_toTopOf="parent"
        />

    <ru.g000sha256.wallet.widget.SimpleView
        android:id="@+id/status_bar_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        />

    <TextView
        android:id="@+id/title_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:fontFamily="sans-serif-medium"
        android:gravity="center"
        android:lines="1"
        android:minHeight="56dp"
        android:paddingStart="56dp"
        android:paddingEnd="56dp"
        android:text="@string/feature_cards_title"
        android:textColor="@color/white_80"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/status_bar_view"
        />

    <ImageButton
        android:id="@+id/settings_image_button"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginEnd="4dp"
        android:background="@drawable/bg_button_circle"
        android:src="@drawable/ic_settings"
        app:layout_constraintBottom_toBottomOf="@id/title_text_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/title_text_view"
        />

    <EditText
        android:id="@+id/edit_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/feature_cards_bg_search"
        android:drawableStart="@drawable/ic_search"
        android:drawablePadding="16dp"
        android:fontFamily="sans-serif"
        android:hint="@string/feature_cards_search"
        android:imeOptions="actionDone|flagNoFullscreen"
        android:inputType="text"
        android:minHeight="48dp"
        android:paddingStart="24dp"
        android:paddingEnd="64dp"
        android:saveEnabled="false"
        android:textColor="@color/white_80"
        android:textColorHint="@color/white_40"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title_text_view"
        app:layout_constraintWidth_max="500dp"
        />

    <ImageButton
        android:id="@+id/clear_image_button"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginEnd="4dp"
        android:background="@null"
        android:src="@drawable/ic_clear"
        app:layout_constraintBottom_toBottomOf="@id/edit_text"
        app:layout_constraintEnd_toEndOf="@id/edit_text"
        app:layout_constraintTop_toTopOf="@id/edit_text"
        />

    <ru.g000sha256.wallet.widget.SimpleView
        android:id="@+id/top_divider_view"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/gray66"
        app:layout_constraintTop_toBottomOf="@id/edit_text"
        />

    <LinearLayout
        android:id="@+id/error_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="32dp"
        app:layout_constraintBottom_toTopOf="@id/bottom_divider_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/top_divider_view"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:text="@string/feature_cards_error_title"
            android:textColor="@color/white_40"
            android:textSize="64sp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="sans-serif"
            android:gravity="center_horizontal"
            android:text="@string/feature_cards_error_text"
            android:textColor="@color/white_40"
            android:textSize="18sp"
            />

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:background="@drawable/bg_button_flat"
            android:fontFamily="sans-serif-medium"
            android:minWidth="0dp"
            android:minHeight="0dp"
            android:paddingStart="16dp"
            android:paddingTop="8dp"
            android:paddingEnd="16dp"
            android:paddingBottom="8dp"
            android:stateListAnimator="@null"
            android:text="@string/feature_cards_error_button"
            android:textColor="@color/lime_80"
            android:textSize="16sp"
            />
    </LinearLayout>

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="40dp"
        android:layout_height="40dp"
        app:layout_constraintBottom_toTopOf="@id/bottom_divider_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/top_divider_view"
        />

    <ru.g000sha256.wallet.widget.SimpleView
        android:id="@+id/bottom_divider_view"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/gray66"
        app:layout_constraintBottom_toTopOf="@id/bottom_bar_view"
        />

    <ru.g000sha256.wallet.widget.SimpleView
        android:id="@+id/bottom_bar_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/gray33_95"
        app:layout_constraintBottom_toBottomOf="parent"
        />
</androidx.constraintlayout.widget.ConstraintLayout>